--- a/package.json
+++ b/package.json
@@ -2,5 +2,10 @@
   "name": "typescript",
   "version": "0.0.0",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "@grapecity/wijmo": "5.20212.812",
+    "@grapecity/wijmo.grid": "5.20212.812",
+    "@grapecity/wijmo.input": "^5.20212.812",
+    "@grapecity/wijmo.styles": "5.20212.812"
+  }
 }
